kubernetes/drupal.yaml
---
apiVersion: v1
kind: Service
metadata: 
  name: drupal-service
spec: 
  ports: 
    - 
      name: http
      port: 80
      protocol: TCP
  selector: 
    app: drupal
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  labels: 
    app: drupal
  name: drupal
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: drupal
  template: 
    metadata: 
      labels: 
        app: drupal
    spec: 
      containers: 
        - 
          image: igorbesel/adesso-cms
          name: drupal
          ports: 
            - 
              containerPort: 80
          # durch config map ersetzen
          volumeMounts:
            - name: drupal-data
              mountPath: /var/www/html/web/sites/default/files
      imagePullSecrets:
        - name: hub.docker.io
      volumes:
        - 
          name: vol-drupal
          persistentVolumeClaim: 
            claimName: drupal-pvc
